// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons renders Anchor properly 1`] = `
<a
  class="no-underline hover:underline decoration-yellow underline-offset-8"
>
  Teste
</a>
`;

exports[`Buttons renders Button1 properly 1`] = `
<button
  class="relative w-[169px] h-[48px] py-[10px] px-[20px] bg-yellow rounded-tr rounded-bl duration-500 active:scale-95 hover:border-white hover:border-solid hover:border"
>
  Teste
</button>
`;

exports[`Buttons renders Button2 properly 1`] = `
<button
  class="h-[48px] w-[328px] rounded-tr rounded-bl py-[12px] px-[16px] bg-yellow md:w-[215px] duration-500 active:scale-95 hover:border-white hover:border-solid hover:border sm:w-[300px] md:w-[340px]"
>
  Teste
</button>
`;

exports[`Buttons renders Button3 properly 1`] = `
<button
  class="h-[48px] w-[172px] rounded-tr rounded-bl py-[12px] px-[16px] border-solid border border-white hover:border-yellow active:scale-95 duration-700"
>
  Teste
</button>
`;

exports[`Buttons renders Button4 properly 1`] = `
<button
  class="py-[12px] px-[16px] rounded-tr rounded-bl duration-500 border-solid border border-white hover:border-yellow active:scale-95"
>
  Teste
</button>
`;

exports[`Buttons renders Li properly 1`] = `
<li
  class="pl-3 rounded-2"
>
  Teste
</li>
`;

exports[`Buttons renders Ul properly 1`] = `
<ul
  class="grid grid-flow-col gap-2 font-['sans'] list-none"
>
  Teste
</ul>
`;
